--- a/type2/style.css
+++ b/type2/style.css
@@ -39,7 +39,7 @@ li {
     }
 
 #feature {
-    background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20190222/ourmid/pngtree-hand-painted-cartoon-outdoor-scenery-mountain-range-image_48353.jpg);
+    background-image: url(https://assets.gamepur.com/wp-content/uploads/2021/08/05132359/IMG_5558.jpg);
 }
 
 #nav {
