--- a/type2/style.css
+++ b/type2/style.css
@@ -43,9 +43,9 @@ li {
 }
 
 #nav {
-    background-color: lightgoldenrodyellow;
+    background-color: #beb48e;
 }
 
 #footer {
-    background-color: lightgoldenrodyellow
+    background-color: #beb48e
 }
