--- a/type2/style.css
+++ b/type2/style.css
@@ -8,7 +8,7 @@ h1 {
     font-family: 'PetitFormalScriptRegular';
     font-weight: normal;
     font-style: normal;
-    color: coral;
+    color: #523e59;
 }
 #content {
     overflow: auto;}
@@ -20,14 +20,14 @@ h1 {
     margin: 1%;}
 
 .column1{
-    background-color: darkslategrey;
+    background-color: #939289;
 }
 .column2{
-    background-color: darkgrey;
+    background-color: #642728;
 }
 .column3 {
     margin-right: 0%;
-background-color: cyan;}
+background-color: #6c6b75;}
 li {
     display: inline;
     padding: 0.5em;}
