--- a/type2/style.css
+++ b/type2/style.css
@@ -5,7 +5,7 @@ body {
 text-align: center;}
 
 h1 {
-    font-family: 'PetitFormalScriptRegular';
+    font-family: 'AvaraBold';
     font-weight: normal;
     font-style: normal;
     color: #523e59;
