--- a/type2/style.css
+++ b/type2/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image:url(https://wallpaperaccess.com/full/3089023.png);
+    background-image:url(https://assets.gamepur.com/wp-content/uploads/2021/08/05132359/IMG_5558.jpg);
     width: 90%;
     margin: 0 auto;
 text-align: center;}
@@ -39,7 +39,7 @@ li {
     }
 
 #feature {
-    background-image: url(https://assets.gamepur.com/wp-content/uploads/2021/08/05132359/IMG_5558.jpg);
+    background-image: url(https://c4.wallpaperflare.com/wallpaper/425/35/654/moon-minimal-wolf-howling-silhouette-wallpaper-preview.jpg);
 }
 
 #nav {
