--- a/type2/style.css
+++ b/type2/style.css
@@ -43,6 +43,7 @@ li {
 
 #feature {
     background-image: url(https://i.pinimg.com/originals/c4/5a/7c/c45a7c62bfe50497ca660242b5652538.png);
+    background-repeat:no-repeat;}
 }
 
 #nav {
