--- a/type2/style.css
+++ b/type2/style.css
@@ -42,7 +42,7 @@ li {
     }
 
 #feature {
-    background-image: url(https://i.pinimg.com/originals/c4/5a/7c/c45a7c62bfe50497ca660242b5652538.png);
+    background-image: url(https://64.media.tumblr.com/e48475b910745c51fb63cc706db4e0a8/tumblr_inline_p1q0fx66cR1r1oqaf_540.jpg);
     background-repeat:no-repeat;}
 }
 
