--- a/type2/style.css
+++ b/type2/style.css
@@ -42,7 +42,7 @@ li {
     }
 
 #feature {
-    background-image: url(https://wallpapersmug.com/download/3840x2160/6d3c26/dark-minimal-mountains.png);
+    background-image: url(https://mfiles.alphacoders.com/804/804456.jpg);
 }
 
 #nav {
